back/k8s/pod 2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sodanypod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginxdemos/hello
    ports:
    - containerPort: 80
