back/k8s/service 2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: github-sodany
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
