back/k8s/ingress 2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: github-sodany
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "webapprouting.kubernetes.azure.com"
  rules:
  - http:
      paths:
      - path: /nginx-sodany
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
